test/bad/bad_default_enum.veld
// BAD: @default with invalid enum value
enum Color { red green blue }

model Item {
  color: Color @default(yellow)
}

